--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -7,6 +7,7 @@
 	<category>Language Extensions</category>
 
 	<depends>consulo.php</depends>
+	<depends>consulo.java</depends>
 	<depends>org.jetbrains.plugins.yaml</depends>
 
 	<extensions defaultExtensionNs="com.intellij">
