Add runing jppm tasks

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,5 +17,6 @@
 				mutableClass="consulo.jphp.extension.impl.JphpMutableModuleExtensionImpl"
 				immutableClass="consulo.jphp.extension.impl.JphpModuleExtensionImpl" />
 		<moduleImportProvider implementation="consulo.jphp.jppm.importProvider.JPPMModuleImportProvider" />
+		<configurationType implementation="consulo.jphp.jppm.run.JPPMTaskConfigrationType" />
 	</extensions>
 </consulo-plugin>
